# RPM-1.3

./: .env.example  .gitignore  DEPLOYMENT_FIX.md  LOCAL_TESTING_GUIDE.md  QUICK_DEPLOY.sh  QUICK_START.md  check_tables.py  netlify.toml  package-lock.json  package.json  run-everytime-for-claude  run-rpm.sh  test_4_2_features.py  test_ai_queries.md  test_redshift.py  test_results_4_2.md  test_sanitization.py  turbo.json
.bmad-core/: install-manifest.yaml
apps/backend/: .env.example  .gitignore  .railwayignore  =1.0.0  RAILWAY_DEPLOYMENT.md  RAILWAY_ENV_SETUP.md  backend_new_log.txt  debug_railway.py  deploy_cloudflare.sh  deploy_instructions.md  fix_auth.sh  main.py  nixpacks.toml  package.json  pyproject.toml  railway.toml  railway_deploy.sh  render.yaml  requirements.txt  set_env_vars.sh  set_railway_vars.sh  worker.py  wrangler.toml
apps/backend/Excel Files/: PPA Price.xlsx
apps/backend/src/: __init__.py
apps/backend/src/api/: ai.py  routes.py
apps/backend/src/core/: config.py  database.py  financial_config.py  security.py
apps/backend/src/dal/: __init__.py  inverters.py  site_performance.py  sites.py  skids.py
apps/backend/src/models/: site_performance.py
apps/backend/src/services/: ai_service.py  ai_service_v2.py
apps/backend/tests/: test_ai_service.py  test_api.py  test_database_connection.py  test_inverters_api.py  test_inverters_dal.py  test_security.py  test_site_performance_api.py  test_site_performance_dal.py  test_site_performance_models.py  test_sites_api.py  test_sites_dal.py  test_skids_api.py  test_skids_dal.py
archive/: 1.1.story.md  (+1 more)
(+133 files in other folders)
